fix: search result spacing

--- a/src/assets/styles/components/forms.css
+++ b/src/assets/styles/components/forms.css
@@ -46,7 +46,7 @@ select {
 }
 
 .search__results {
-  margin: var(--sizing-base) 0 0;
+  margin: 0 0 var(--sizing-base);
   padding: 0;
   list-style: none;
 
